--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,133 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.signup{
+ position: relative;
+ top: -800px;
+}
+/* input{
+  border-radius: 10px;
+  border: 1px solid tomato;
+  width: 200px;
+  height: 20px;
+} */
+.forms{
+  font-weight: 500;
+  font-size: large;
+}
+
+.hover{
+  color: rgba(244, 37, 37, 0.995);
+  
+}
+.hover:hover{
+  color: rgb(240, 143, 176);
+}
+.submit{
+  width: 120px;
+  height: 25px;
+  border-radius: 20px;
+  font-size: 15px;
+  margin: 5px;
+  padding: 2px;
+  background-color: rgb(250, 168, 154);
+}
+.submit:hover{
+  background-color: tomato;
+}
+
+img{
+  width: 100%;
+  height: 800px;
+}
+
+/* home */
+.flex{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.child{
+  width: 400px;
+  height: 420px;
+  background-color: rgb(242, 248, 248);
+  margin: 20px;
+  border-radius: 20px;
+  box-shadow: 10px 10px rgb(185, 185, 184);
+}
+.child:hover{
+  background-color: rgb(179, 252, 252);
+  box-shadow: 10px 10px rgb(243, 243, 91);
+}
+.child-image-size{
+  width: 350px;
+  height: 250px;
+  padding: 20px 0px 0px 10px;
+  align-items: center;
+}
+
+.header-title{
+  font-size: large;
+}
+
+
+
+.discount-price{
+  font-size: 15px;
+}
+.address{
+  font-size: 10px;
+
+}
+.block{
+  position: relative;
+  top: 20px;
+
+}
+.price-title{
+  font-size: 22px;
+
+}
+
+.price{
+  position: absolute;
+  left: 40px;
+  
+}
+.price:hover{
+  color: chocolate;
+}
+
+
+
+.add-to-cart{
+  position: absolute;
+  left: 180px;
+  top: 0px;
+  width: 150px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: yellow;
+  border: 1px solid black;
+}
+
+.add-to-cart,.now:hover{
+  background-color: rgb(255, 123, 100);
+}
+
+.payment{
+  background-image: linear-gradient(to top ,rgb(254, 173, 187),rgb(193, 190, 190),rgb(181, 181, 252));
+  height: 700px;
+
+}
+.now{
+ 
+  width: 150px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: yellow;
+  border: 1px solid black;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
